Bug 925663 - Establish HSP connection if and only if HFP service record couldn't be found, r=gyeh